syntax = "proto3";
package game;

service Game {
    rpc MakeMove (MoveRequest) returns (MoveResponse);
}

message MoveRequest {
    optional uint32 meta_board_pos = 1;
    uint32 small_board_pos = 2;
}

message MoveResponse {
    string board = 1;
    GameUpdate game_update = 2;
}

enum GameUpdate {
    X_WON = 0;
    O_WON = 1;
    DRAW = 2;
    ILLEGAL_MOVE = 3;
    ONGOING = 4;
}
